# KCY-Accounting_Cpp

./: .gitignore  README.md
LicenseServer/: CMakeLists.txt  licenses.csv
LicenseServer/doc/: build_info.md
LicenseServer/lib/: License.cpp  License.h  LicenseServer.cpp  LicenseServer.h
LicenseServer/src/: main.cpp
LicenseServer/tests/: catch.cpp  test_license.cpp
